testdata/EtaX/EtaX.prop/EtaX.prop.02.check
// src:   val t2c: () => Any = prop()
// 2.13-base error
target/testdata/EtaX/EtaX.prop.02.scala:9: error: not enough arguments for method apply: (i: Int): Char in class StringOps.
Unspecified value parameter i.
  val t2c: () => Any = prop()
                           ^
1 error

// 2.13-head error <no change>
// 2.13-new  error <no change>
// 3.0-old   error
-- Error: target/testdata/EtaX/EtaX.prop.02.scala:9:27 -------------------------
9 |  val t2c: () => Any = prop()
  |                       ^^^^^^
  |          missing argument for parameter i of method apply: (i: Int): Char
1 error found

// 3.0       error <no change>
// 3.1-migr  error <no change>
// 3.1       error <no change>

error error error error error error error
